--- a/views/users/forget.ejs
+++ b/views/users/forget.ejs
@@ -9,7 +9,7 @@ if(typeof message !== 'undefined'){
     <%
 }
 %>
-<form action="/login" method="post">
+<form action="/forget" method="post">
     <input type="email" name="email" required placeholder="Enter Email">
     <br><br>
     <input type="password" name="password"required placeholder="Enter Password" id="">
