--- a/views/users/email-verified.ejs
+++ b/views/users/email-verified.ejs
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Email verifief</title>
-</head>
-<body>
-    <h1>Your Email is sucessfully Verified</h1>
-</body>
-</html>
+<% include('../layouts/header') %>
+    <title>Email verify</title>
+
+    <h1 >Your Email is sucessfully Verified</h1>
+
+<% include('../layouts/footer') %>
