--- a/views/users/forget-password.ejs
+++ b/views/users/forget-password.ejs
@@ -1,14 +1,32 @@
-!<% include('../layouts/header.ejs') %>
+<%- include('../layouts/header') %>
 
-<h1>FORGET PASSWORD</h1>
+<div class="cont">
+    <h1 class="text-2xl font-bold mb-4">Reset Password</h1>
 
-<form action="" method="post">
+    <% if (typeof message !== 'undefined' && message) { %>
+        <p style="color: red; font-weight: bold; margin-bottom: 10px;"><%= message %></p>
+    <% } %>
 
-    <input type="password" name="password"required placeholder="Enter Password" id="">
-    <br><br>
+<form action="/forget-password" method="post" class="space-y-6">
+        <div class="space-y-4">
+            <!-- New Password -->
+            <div>
+                <div class="flex items-center mb-1">
+                    <i class="fas fa-lock text-white mr-2 opacity-80"></i>
+                    <label for="password" class="text-white text-sm opacity-80">New Password</label>
+                </div>
+                <input type="password" name="password" id="password" class="input-field" placeholder="Enter New Password" required>
+            </div>
+
 <input type="hidden" name="user_id" value="<%= user_id %>">
-    <input type="submit" value="Reset Password">
+    <input type="submit" class="btn-login w-full mt-4"value="Reset Password">
         
 </form>
 
 <% include('../layouts/footer.ejs') %>
+
+            
+
+
+
+    
