--- a/views/admin/forget-password.ejs
+++ b/views/admin/forget-password.ejs
@@ -1,18 +1,22 @@
-<% include("../layouts/header.ejs")%>
+<%- include('../layouts/header') %>
+<div class="cont">
 
-<h1>Update New Password</h1>
+<h1 class="text-2xl font-bold mb-4">Update New Password</h1>
 
 
-<form action="" method="post">
+<form action="/admin/forget-password" method="post" class="space-y-6">
     <br><br>
+        <div class="space-y-4">
 
-    <input type="password" name="password" placeholder="Enter new password" required>
-    <br><br>
+    <div>
+                <div class="flex items-center mb-1">
+                    <i class="fas fa-lock text-white mr-2 opacity-80"></i>
+                    <label for="password" class="text-white text-sm opacity-80">New Password</label>
+                </div>
+                <input type="password" name="password" id="password" class="input-field" placeholder="Enter New Password" required>
+            </div>
 <input type="hidden" name="user_id" value="<%= admin_id %>">
-    <input type="submit" value="Reset Password" >
-
-
-
+    <input type="submit" class="btn-login w-full mt-4"value="Reset Password">
 </form><br>
 
 
