--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -5,19 +5,27 @@
 
 <img src="userImages/<%= user.image %>" width="100px" height="100px" alt="">
 
-<form action="" method="post" enctype="multipart/form-data" >
+<form action="/user/edit" method="POST" enctype="multipart/form-data">
+    <input type="hidden" name="user_id" value="<%= user._id %>">
 
-  <input type="file" name="image">
-  <input type="hidden" name="user_id" value="<%= user._id %>">
-  <br><br>
-  <input type="text" name="name" value="<%= user.name %>" placeholder="Enter Your name" required>
-  <br><br>
-  <input type="email" name="email" value="<%= user.email %>" placeholder="Enter Your email" required>
-  <br><br>
-  <input type="text" name="mno" value="<%= user.mobile %>" placeholder="Enter Your mobile" required>
-  <br><br>
-  <input type="submit" value="Update Profile">
-</form>
+    <label>Name</label>
+    <input type="text" name="name" value="<%= user.name %>" required><br>
+
+    <label>Email</label>
+    <input type="email" name="email" value="<%= user.email %>" required><br>
+
+    <label>Mobile</label>
+    <input type="text" name="mobile" value="<%= user.mobile %>" required><br>
+
+    <label>Profile Image</label>
+    <input type="file" name="image"><br>
+    <% if (user.image) { %>
+      <img src="/userImages/<%= user.image %>" width="100">
+    <% } %>
+    <br><br>
+
+    <button type="submit">Update</button>
+  </form>
 
 <%
 if(typeof message !== 'undefined'){
