--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -1,17 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
+<% include('../layouts/header') %>
   <title>Home Page</title>
-</head>
-<body>
+
   <% if(user) { %>
     <h1>Welcome, <%= user.name %>!</h1>
     <p>Email: <%= user.email %></p>
-    <p>Mobile: <%= user.mobile %></p>
     <a href="/logout">Logout</a>
   <% } else { %>
     <h1>Welcome, Guest!</h1>
     <a href="/login">Login</a>
   <% } %>
-</body>
-</html>
+<% include('../layouts/footer') %>
