--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -8,7 +8,7 @@
 
 <!-- <form action="/login" method="post"> -->
     <!-- Background spheres -->
-     <form action="/login" method="POST" class="space-y-6"enctype="multipart/form-data">
+<form action="/login" method="POST" class="space-y-6">
 
     <div class="sphere sphere-1"></div>
     <div class="sphere sphere-2"></div>
