--- a/views/admin/addUser.ejs
+++ b/views/admin/addUser.ejs
@@ -61,6 +61,8 @@
   <div class="text-center mt-4">
   </div>
 </div>
+  <a href="/homepage" class="text-cyan-300 hover:opacity-100 transition">Back to Home Page</a>
+
   </form>
 
   
