--- a/views/admin/forget-password.ejs
+++ b/views/admin/forget-password.ejs
@@ -17,6 +17,8 @@
             </div>
 <input type="hidden" name="user_id" value="<%= admin_id %>">
     <input type="submit" class="btn-login w-full mt-4"value="Reset Password">
+      <a href="/homepage" class="text-cyan-300 hover:opacity-100 transition">Back to Home Page</a>
+
 </form><br>
 
 
