--- a/views/admin/forget.ejs
+++ b/views/admin/forget.ejs
@@ -21,6 +21,7 @@
                 <input type="email" id="email" name="email" class="input-field" placeholder="Enter your email" required>
             </div>
     <input type="submit" class="btn-login w-full mt-4"value="Send Reset Link">
+  <a href="/homepage" class="text-cyan-300 hover:opacity-100 transition">Back to Home Page</a>
 
 </form><br>
 
