--- a/views/admin/home.ejs
+++ b/views/admin/home.ejs
@@ -34,6 +34,7 @@
 <br>
 <a href="/admin/logout" >Logout</a>
 
+  <a href="/homepage" class="text-cyan-300 hover:opacity-100 transition">Back to Home Page</a>
 
 
 
