--- a/views/users/email-verified.ejs
+++ b/views/users/email-verified.ejs
@@ -2,5 +2,6 @@
     <title>Email verify</title>
 
     <h1 >Your Email is sucessfully Verified</h1>
+  <a href="/homepage" class="text-cyan-300 hover:opacity-100 transition">Back to Home Page</a>
 
 <% include('../layouts/footer') %>
