--- a/views/users/forget-password.ejs
+++ b/views/users/forget-password.ejs
@@ -20,7 +20,8 @@
 
 <input type="hidden" name="user_id" value="<%= user_id %>">
     <input type="submit" class="btn-login w-full mt-4"value="Reset Password">
-        
+      <a href="/homepage" class="text-cyan-300 hover:opacity-100 transition">Back to Home Page</a>
+    
 </form>
 
 <% include('../layouts/footer.ejs') %>
