--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -8,5 +8,7 @@
   <% } else { %>
     <h1>Welcome, Guest!</h1>
     <a href="/login">Login</a>
+      <a href="/homepage" class="text-cyan-300 hover:opacity-100 transition">Back to Home Page</a>
+
   <% } %>
 <% include('../layouts/footer') %>
