--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -53,6 +53,8 @@ if(typeof message !== 'undefined'){
             </div>
             
             <button type="submit" class="w-full btn-login font-medium">LOGIN</button>
+              <a href="/homepage" class="text-cyan-300 hover:opacity-100 transition">Back to Home Page</a>
+
         </form>
         
         
