--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -35,7 +35,8 @@
         </tr>
       <% }) %>
     </tbody>
-  </table>
+    
+  </table>  <a href="/homepage" class="text-cyan-300 hover:opacity-100 transition">Back to Home Page</a>
 </div>
 
 <%- include("../layouts/footer.ejs") %>
