--- a/views/admin/edit.ejs
+++ b/views/admin/edit.ejs
@@ -60,6 +60,8 @@
 <!-- Back Link -->
 <div class="text-center mt-4">
   <a href="/admin/dashboard" class="btn btn-back">⬅ Back to Dashboard</a>
+    <a href="/homepage" class="text-cyan-300 hover:opacity-100 transition">Back to Home Page</a>
+
 </div>
 </div>
 
