--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -40,7 +40,8 @@
 
             
             <button type="submit" class="w-full btn-login font-medium">LOGIN</button>
-        </form>
+          <a href="/homepage" class="text-cyan-300 hover:opacity-100 transition">Back to Home Page</a>
+
 </form>
 
 
