--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -25,6 +25,8 @@
     <br><br>
 
     <button type="submit">Update</button>
+  <a href="/homepage" class="text-cyan-300 hover:opacity-100 transition">Back to Home Page</a>
+
   </form>
 
 <%
