--- a/views/users/forget.ejs
+++ b/views/users/forget.ejs
@@ -26,6 +26,8 @@
 
     <div class="mt-4">
         <a href="/login" class="text-cyan-300 hover:opacity-100 transition">Back to Login</a>
+                      <a href="/homepage" class="text-cyan-300 hover:opacity-100 transition">Back to Home Page</a>
+
     </div>
 </div>
 
