--- a/views/admin/forget-password.ejs
+++ b/views/admin/forget-password.ejs
@@ -15,7 +15,8 @@
                 </div>
                 <input type="password" name="password" id="password" class="input-field" placeholder="Enter New Password" required>
             </div>
-<input type="hidden" name="user_id" value="<%= admin_id %>">
+              <input type="hidden" name="user_id" value="<%= user_id %>">
+
     <input type="submit" class="btn-login w-full mt-4"value="Reset Password">
       <a href="/homepage" class="text-cyan-300 hover:opacity-100 transition">Back to Home Page</a>
 
